# srgssr_news_downloader

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  setup.py
installation_files/: install.bat
installation_files/data/: requirements.txt  run.bat  run.vbs
srgssr_news_downloader/: __init__.py  __main__.py  main.py  version.py
srgssr_news_downloader/gui/: main_window_ui.py
srgssr_news_downloader/res/: main_window.ui  main_window_ui.py
srgssr_news_downloader/utils/: config_helper.py  logging_setup.py  srgssr_api_helper.py
tests/integration/: test_can_download_news.py
