[project]
name = "srgssr_news_downloader"
version = "101.0.0rc3"
description = "SRGSSR News Downloader by Nikita Schaffner for Radio4TNG"
authors = [
    {name = "Nikita SCHAFFNER", email = "dev@schaffnern.ch"},
]
dependencies = []
requires-python = ">=3.13"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"


[tool.pdm]
distribution = true

[dependency-groups]
dev = [
    "ruff>=0.9.10",
    "isort>=6.0.1",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
]
